tests/snapshots/cli__list_mutants_in_all_trees__json__already_failing_doctests.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/lib.rs",
    "line": 9,
    "function": "takes_one_arg",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  }
]
