tests/snapshots/cli__list_mutants_in_all_trees__json__already_failing_tests.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/lib.rs",
    "line": 1,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
