tests/snapshots/cli__list_mutants_in_all_trees__json__already_hangs.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/lib.rs",
    "line": 8,
    "function": "infinite_loop",
    "return_type": "",
    "replacement": "()"
  }
]
