tests/snapshots/cli__list_mutants_in_all_trees__json__cfg_attr_mutants_skip.snap
---
source: tests/cli.rs
assertion_line: 41
expression: "String::from_utf8_lossy(&output.stdout)"
---
[]
