tests/snapshots/cli__list_mutants_in_all_trees__json__factorial.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/bin/main.rs",
    "line": 1,
    "function": "main",
    "return_type": "",
    "replacement": "()"
  },
  {
    "file": "src/bin/main.rs",
    "line": 7,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
