tests/snapshots/cli__list_mutants_in_all_trees__json__hang_avoided_by_attr.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/lib.rs",
    "line": 12,
    "function": "controlled_loop",
    "return_type": "",
    "replacement": "()"
  }
]
