tests/snapshots/cli__list_mutants_in_all_trees__json__nightly_only.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/main.rs",
    "line": 2,
    "function": "main",
    "return_type": "",
    "replacement": "()"
  }
]
