tests/snapshots/cli__list_mutants_in_all_trees__json__override_dependency.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "true"
  },
  {
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "false"
  }
]
