tests/snapshots/cli__list_mutants_in_all_trees__json__strict_warnings.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/lib.rs",
    "line": 5,
    "function": "some_fn",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  }
]
